tests/Jroc.Test262.Tests/built-ins/NativeErrors/JavaScript/TypeError/constructor.js
assert.sameValue(typeof TypeError, 'function', 'typeof TypeError is "function"');

